# nipyapi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEVNOTES.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  TODO.rst  code_of_conduct.md  nipyapi.code-workspace  pylintrc  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: .gitignore  Makefile  apiClients.rst  apiReference.rst  authentication.rst  authors.rst  ci.rst  cli.rst  cli_quickstart.md  conf.py  contributing.rst  devnotes.rst  extensions.rst  history.rst  index.rst  installation.rst  make.bat  migration.rst  nifiDocs.md  profiles.rst  registryDocs.md  security.rst  swagger_client.rst  todo.rst  usage.rst
docs/nifi-docs/: AboutDTO.md  AboutEntity.md  AccessApi.md  AccessConfigurationDTO.md  AccessConfigurationEntity.md  AccessPolicyDTO.md  AccessPolicyEntity.md  AccessPolicySummaryDTO.md  AccessPolicySummaryEntity.md  AccessStatusDTO.md  AccessStatusEntity.md  ActionDTO.md  ActionDetailsDTO.md  ActionEntity.md  ActivateControllerServicesEntity.md  AffectedComponentDTO.md  AffectedComponentEntity.md  AllowableValueDTO.md  AllowableValueEntity.md  AttributeDTO.md  BannerDTO.md  BannerEntity.md  BatchSettingsDTO.md  BatchSize.md  Bucket.md  BucketDTO.md  BucketEntity.md  BucketsEntity.md  BulletinBoardDTO.md  BulletinBoardEntity.md  BulletinDTO.md  BulletinEntity.md  Bundle.md  BundleDTO.md  ClusteSummaryEntity.md  ClusterDTO.md  ClusterEntity.md  ClusterSearchResultsEntity.md  ClusterSummaryDTO.md  ComponentDetailsDTO.md  (+243 more)
docs/nipyapi-docs/: api_reference.rst  client_architecture.rst  core_modules.rst  dependencies.rst  examples.rst  nipyapi.demo.rst  nipyapi.nifi.apis.rst  nipyapi.nifi.models.rst  nipyapi.nifi.rst  nipyapi.registry.apis.rst  nipyapi.registry.models.rst  nipyapi.registry.rst  nipyapi.rst
docs/registry-docs/: AccessApi.md  AccessPolicy.md  AccessPolicySummary.md  BatchSize.md  Bucket.md  BucketFlowsApi.md  BucketItem.md  BucketsApi.md  Bundle.md  ConnectableComponent.md  ControllerServiceAPI.md  CurrentUser.md  Fields.md  FlowsApi.md  ItemsApi.md  Link.md  Permissions.md  PoliciesApi.md  Resource.md  ResourcePermissions.md  Tenant.md  TenantsApi.md  ThePositionOfAComponentOnTheGraph.md  UriBuilder.md  User.md  UserGroup.md  VersionedConnection.md  VersionedControllerService.md  VersionedFlow.md  VersionedFlowCoordinates.md  VersionedFlowSnapshot.md  VersionedFlowSnapshotMetadata.md  VersionedFunnel.md  VersionedLabel.md  VersionedPort.md  VersionedProcessGroup.md  VersionedProcessor.md  VersionedPropertyDescriptor.md  VersionedRemoteGroupPort.md  VersionedRemoteProcessGroup.md
docs/registry_docs/: AccessApi.md  BucketItem.md  (+26 more)
examples/: README.md  console.py  fdlc.py  profiles.yml  sandbox.py  secure_connection.py
legacy_tmp/: generate.bat  nifi.conf.json  registry.conf.json
nipyapi/: __init__.py  _utils.py  _version.py  bulletins.py  canvas.py  cli.py  config.py  extensions.py  layout.py  nifi_registry.py  nipyapi.py  parameters.py  profiles.py  security.py  system.py  templates.py  utils.py  versioning.py
nipyapi-py2/: pip-selfcheck.json
swagger_templates/: api.mustache
templates/: rest.mustache
test_env_config/: testTemplate_00.xml
tests/: __init__.py  conftest.py  console.py  test_about_dto.py  test_about_entity.py  test_access_api.py  test_access_configuration_dto.py  test_access_configuration_entity.py  test_access_policy_dto.py  test_access_policy_entity.py  test_access_policy_summary_dto.py  test_access_policy_summary_entity.py  test_access_status_dto.py  test_access_status_entity.py  test_action_details_dto.py  test_action_dto.py  test_action_entity.py  test_allowable_value_dto.py  test_allowable_value_entity.py  test_attribute_dto.py  test_banner_dto.py  test_banner_entity.py  test_batch_settings_dto.py  test_bulletin_board_dto.py  test_bulletin_board_entity.py  test_bulletin_dto.py  test_bulletin_entity.py  test_bulletins.py  test_bundle_dto.py  test_canvas.py  test_ci.py  test_cli.py  test_cluste_summary_entity.py  test_cluster_dto.py  test_cluster_entity.py  test_cluster_search_results_entity.py  test_cluster_summary_dto.py  test_component_details_dto.py  test_component_history_dto.py  test_component_history_entity.py  (+211 more)
(+1537 files in other folders)
